<resources>
    <string name="app_name">Parcel Tracking Admin</string>
    <string name="parcel_delivery_admin">Parcel Delivery Admin</string>
    <string name="enter_parcel_number">Enter Parcel Number:</string>
    <string name="add_parcel">Add Parcel</string>
    <string name="list_of_parcel">List of Parcel</string>
    <string name="tracking_status">Tracking Status:</string>
    <string name="active">ACTIVE</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="display_current_location">Display Current Location</string>
    <string name="parcel_number">Parcel Number:</string>
    <string name="full_name">Full Name:</string>
    <string name="full_address">Full Address:</string>
    <string name="status">Status:</string>
    <string name="datetime_delivered">DateTime Delivered:</string>
    <string name="parcel_delivery_today">Parcel Delivery Today</string>
    <string name="my_current_location">My Current Location</string>
    <string name="latitude">Latitude:</string>
    <string name="enter_lat_here">Enter Lat Here</string>
    <string name="longitude">Longitude:</string>
    <string name="enter_lng_here">Enter Lng Here</string>
    <string name="last_updated">Last Updated:</string>
    <string name="enter_datetime_here">Enter DateTime Here</string>
    <string name="active_status">ACTIVE</string>
    <string name="non_active_status">NOT-ACTIVE</string>
    <string name="parcel_number_not_in_database">Parcel Number is not in database</string>
    <string name="current_location_not_active">Current Location is not active</string>
    <string name="empty_string" />
    <string name="fetching_parcel_info">Fetching parcel information...</string>
    <string name="start_location_updates">Start Location Updates</string>
    <string name="service_destoryed">Service Destroyed</string>
    <string name="delivered">Delivered</string>
    <string name="attempted_delivery">Attempted Delivery</string>
    <string name="saving_progress_dialog">Storing Parcel and Location into database...</string>
    <string name="enter_valid_parcel_number">Please enter a valid Parcel Number...</string>
    <string name="data_failed_to_store_in_db">Data failed to store in database.. Check network connection</string>
    <string name="data_stored_success">Data is stored in database</string>
</resources>
