<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/adapter_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:background="@color/colorSkyBlue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_parcel_number_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/parcel_number"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_parcel_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_parcel_full_name_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_parcel_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_parcel_address_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/full_address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_parcel_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_parcel_status_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_parcel_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_parcel_dateTimeDelivered_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/datetime_delivered"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_parcel_dateTimeDelivered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>